<resources>
    <string name="app_name">✨ Dormie ✨</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_account_click_here_to_register">Create new account? Click here to register.</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_already_have_an_account_click_here_to_sign_in">You already have an account? Click here to sign in.</string>
    <string name="home">Home 🌆</string>
    <string name="chat">Chat 📣</string>
    <string name="rental_registration">Rental Registration</string>
    <string name="others">Others</string>
    <string name="profile">Profile 😄</string>
    <string name="setting">Setting</string>
    <string name="welcome_to_dormie">Welcome to Dormie</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="find_a_perfect_home_for_student">Find a perfect home for student.</string>
    <string name="email">Email</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="create_account">Create Account</string>
    <string name="lessor">Lessor</string>
    <string name="tenant">Tenant</string>
    <string name="select_your_role">Select your role</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="saved">Saved</string>
    <string name="take_photo">Take photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="property_name">Property Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="type_of_house">Type of house</string>
    <string name="amenities">Amenities</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="please_enter_your_university">Please enter your university</string>
    <string name="delete_account">Delete account</string>
    <string name="sign_out">Sign out</string>
    <string name="place_name">Place name</string>
    <string name="role">Role</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="apartment">Apartment</string>
    <string name="villa">Villa</string>
    <string name="house">House</string>
    <string name="townhouse">Townhouse</string>
    <string name="mobile">Mobile</string>
    <string name="washer_dryer">Washer/Dryer</string>
    <string name="ramp_access">Ramp access</string>
    <string name="garden">Garden</string>
    <string name="cats_ok">Cats OK</string>
    <string name="dogs_ok">Dogs OK</string>
    <string name="smoke_free">Smoke-free</string>
    <string name="school">School</string>
    <string name="distance_from_school_minimum">Distance from school (minimum)</string>
    <string name="distance_from_school_maximum">Distance from school (maximum in KM unit)</string>
    <string name="empty_image_list">Empty Image List</string>
    <string name="please_import_image">Please import image!</string>
    <string name="edit_post">Edit Post</string>
    <string name="create_new_post">Create new post</string>
    <string name="chat_with_lessor">Chat with Lessor</string>
    <string name="promotion">Promotion 🚀</string>
    <string name="paymentURL">https://us-central1-dormie-5ad44.cloudfunctions.net/stripePayment</string>
    <string name="one_month_promotion">One Month Promotion</string>
    <string name="_10_for_duration_of_1_month">$9.99 for duration of 1 month</string>
    <string name="one_month_body_text">Your post will be recommended first if your place is in the search range. By doing this, you have a higher chance of approach your client. This plan is suitable for short-term lessor. You can use this promotion in high demanding months.</string>
    <string name="one_year_body_text">Your post will be recommended first if your place is in the search range. By doing this, you have a higher chance of approach your client. This plan is suitable for long-term lessor. You can use this promotion if you have lots of place for rented/sale. You also got 2 months worth of subscription discount.</string>
    <string name="buy_now">Buy Now</string>
    <string name="one_year_promotion">One Year Promotion</string>
    <string name="_100_for_duration_of_12_months">$99.99 for duration of 12 months</string>
    <string name="your_account_is_promoted">Your account is promoted</string>
    <string name="search">Search</string>
    <string name="filter">Filter 👀</string>
    <string name="distance_btn_1">1</string>
    <string name="distance_btn_2">5</string>
    <string name="distance_btn_3">10</string>
    <string name="distance_btn_4">20</string>
    <string name="about_the_author">About the author ✌️</string>
    <string name="about_me">
👉 Thach Ho Le Minh, a proactive Fresher Platform Engineer based in HCMC.\n
👉 Pursuing a Bachelor\'s degree in Computer Software Engineering at RMIT Vietnam.\n
👉 Collaborates in a dynamic team at NAB, contributing to infrastructure development in the business domain.\n
👉 Starcamp Software Engineer Intern with expertise in CI/CD, Jenkins, AWS Cloud, React, and more.\n
👉 Achievements include Starcamp MVP and Academic Achievement Scholarship at RMIT Vietnam.\n
    </string>
    <string name="michael_ho">Michael Ho 🇻🇳</string>
    <string name="thach_holeminh_gmail_com">thach.holeminh@gmail.com</string>
    <string name="_07_04_2002">07/04/2002</string>
</resources>